--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Ivo</title>
   </head>
   <body>
 
-    Hello, my name is Ivo.
+    <h1>Hello, Code School!</h1>
+    <ul>
+        <li>JavaScript</li>
+        <li>AngularJS</li>
+        <li>NodeJS</li>
+        <li>PHP</li>
+    </ul>
     
   </body>
 </html>
